<resources>
    <string name="app_name">listofshame</string>
    <string name="hintEmail">Please enter your Email</string>
    <string name="hintPassword">Please enter your Password</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="signInText">Already Registered? Sign in here </string>
    <string name="registerText">Not Registered? Register here </string>
    <string name="loginTextView">Login Page</string>
    <string name="VerificationText">Verify your email</string>
    <string name="VerificationTextWhy">A verification email will be sent to the email you provided. We use this verification email to keep our app safe from attacks and to make sure our users are genuine
    after verifying your email you will be able to login</string>
    <string name="VerificationButton">Click here to send verification email</string>
    <string name="HomeItem">Home</string>
    <string name="ProfileItem">Profile</string>
    <string name="ListItem">List of shame</string>
    <string name="UploadImage">Upload Image</string>
    <string name="chooseImage">Choose Image</string>
    <string name="EnterComment">Enter Comment</string>
    <string name="OpenCamera">Open Camera</string>
    <string name="title_activity_maps">Map</string>

</resources>
